; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c_l2cap_alloc_cid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c_l2cap_alloc_cid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2cap_chan_list = type { i32 }

@L2CAP_CID_DYN_START = common dso_local global i64 0, align 8
@L2CAP_CID_DYN_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.l2cap_chan_list*)* @l2cap_alloc_cid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @l2cap_alloc_cid(%struct.l2cap_chan_list* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.l2cap_chan_list*, align 8
  %4 = alloca i64, align 8
  store %struct.l2cap_chan_list* %0, %struct.l2cap_chan_list** %3, align 8
  %5 = load i64, i64* @L2CAP_CID_DYN_START, align 8
  store i64 %5, i64* %4, align 8
  br label %6

6:                                                ; preds = %18, %1
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @L2CAP_CID_DYN_END, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %6
  %11 = load %struct.l2cap_chan_list*, %struct.l2cap_chan_list** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @__l2cap_get_chan_by_scid(%struct.l2cap_chan_list* %11, i64 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %10
  %16 = load i64, i64* %4, align 8
  store i64 %16, i64* %2, align 8
  br label %22

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17
  %19 = load i64, i64* %4, align 8
  %20 = add nsw i64 %19, 1
  store i64 %20, i64* %4, align 8
  br label %6

21:                                               ; preds = %6
  store i64 0, i64* %2, align 8
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}

declare dso_local i32 @__l2cap_get_chan_by_scid(%struct.l2cap_chan_list*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
